add args for switching dev and pro.

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,7 +4,7 @@ runmode = dev
 enableadmin = false
 
 [dev]
-pgsqlurls = "postgresql"
+pgsqlurls = "10.243.119.84"
 
-[prod]
+[pro]
 pgsqlurls = "postgresql"
