--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 web:
-        build: .
-        command: sleep 10000 && /go/src/github.com/grayzone/screening/screening 1
+        image: grayzone/screening
+        command: /go/src/github.com/grayzone/screening/screening; sleep 10000
         ports:
-        - "80:8080"
+                - "80:8080"         
         links:
-        - postgresql
+                - postgresql
 postgresql:
         image: grayzone/postgresql
         environment: 
