add volume into db container.

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,7 +4,7 @@ runmode = dev
 enableadmin = false
 
 [dev]
-pgsqlurls = "10.243.119.84"
+pgsqlurls = "postgresql"
 
 [pro]
 pgsqlurls = "postgresql"
